--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0",
-    "whatsapp-web.js": "^1.19.2"
+    "whatsapp-web.js": "^1.19.2",
+    "wwebjs-mongo": "^1.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
