--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "mongoose": "^6.8.3",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.5.4",
