--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "mongodb": "^4.12.1",
         "mongoose": "^6.7.4",
         "multer": "^1.4.5-lts.1",
+        "node-cron": "^3.0.2",
         "pino": "^8.7.0",
         "qrcode": "^1.5.1",
         "sharp": "^0.30.5",
