fix: handling with te 9 prefix in braziian numbers

--- a/.env
+++ b/.env
@@ -28,7 +28,8 @@ INSTANCE_MAX_RETRY_QR=2
 # DATABASE CONFIGURATION
 # ==================================
 MONGODB_ENABLED=false
-MONGODB_URL=mongodb+srv://user-tolevando:M5WgWn7neAjAaLgl@api-tolevando.jxu1iq4.mongodb.net/whatsapp-api?retryWrites=true&w=majority
+# MONGODB_URL=mongodb+srv://user-tolevando:M5WgWn7neAjAaLgl@api-tolevando.jxu1iq4.mongodb.net/whatsapp-api?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://juliozambom:juliozambom@cluster0.7rpijbo.mongodb.net/whatsappbotmanager
 
 # ==================================
 # WEBHOOK CONFIGURATION
